--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "T.A.Edmonds",
+  "name": "T.A.Edmonds Portfolio",
   "icons": [
     {
       "src": "logo.ico",
