--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@twistezo/react-text-scramble": "^1.0.6",
     "aos": "^2.3.4",
     "classnames": "^2.2.6",
+    "magnet-mouse": "github:fluffy-factory/magnet-mouse",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
